# robustcov

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml  wheels.yml
benchmarks/: README.md  accuracy_vs_contamination.py  anomaly_detection_baselines.py  auto_scatter_small_sample.py  benchmark_summary.py  fastmcd_quality_speed_tradeoff.py  hard_contamination_scenarios.py  make_report.py  openmp_scaling.py  sklearn_comparison_grid.py  small_sample_heavy_tail.py  speed_estimators.py  support_diagnostics.py
conda/: README.md
conda/recipe/: meta.yaml
docs/: API_STABILITY.md  ESTIMATOR_GUIDE.md  algorithms.rst  api.rst  api_stability.rst  benchmark_gallery.rst  benchmark_report.rst  benchmarks.rst  conf.py  diagnostics.rst  estimator_guide.rst  external_demo_workflow.rst  external_results_gallery.rst  faq.rst  generate_gallery_assets.py  geometry.rst  index.rst  installation.rst  kaggle_examples.rst  kaggle_roadmap.rst  notebooks.rst  openmp.rst  quickstart.rst  references.rst  release_readiness.rst  robust_statistics_background.rst  use_case_gallery.rst  use_cases.rst
docs/_static/: custom.css
docs/_static/benchmarks/: anomaly_baselines.csv  hard_scenarios.csv  openmp_scaling.csv  small_sample_summary.csv  speed.csv
docs/benchmarks/: anomaly_baselines.rst  hard_contamination.rst  openmp_scaling.rst  small_sample_heavy_tail.rst  speed_comparison.rst
docs/external_results/: credit_card_fraud.rst  finance_market_stress.rst  finance_rolling_window.rst  ieee_cis_fraud.rst  medical_screening.rst  predictive_maintenance.rst
docs/gallery/: biomedical_signal.rst  breast_cancer_screening.rst  digits_one_class.rst  embedding_reranking_robust_geometry.rst  finance_risk.rst  fraud_screening.rst  gp_robust_input_metric.rst  image_feature_anomaly.rst  maintenance_monitoring.rst  ml_preprocessing.rst  multimodal_anomaly.rst  network_traffic.rst  portfolio_stress.rst  quality_control.rst  sensor_anomaly.rst  text_embedding_outliers.rst  wine_class_screening.rst
docs/gallery_topics/: biomedical_images_embeddings.rst  finance_and_risk.rst  fraud_security_and_networks.rst  ml_preprocessing.rst  real_ml_datasets.rst  sensors_industrial_quality.rst
examples/: README.md  _ml_use_case_utils.py  adaptive_contamination_fastmcd.py  anomaly_detection.py  auto_robust_scatter.py  auto_selection_stability.py  covariance_contamination_study.py  diagnostic_report_demo.py  embedding_reranking_robust_geometry.py  estimator_selection_guide.py  gp_robust_input_metric.py  missing_values_stability.py  plot_anomaly_baselines.py  plot_benchmark_summary.py  plot_contamination_accuracy.py  plot_openmp_scaling.py  plot_spd_geometry_ml_use_cases.py  plot_speed_accuracy_pareto.py  plot_speed_comparison.py  quickstart.py  real_ml_anomaly.py  real_ml_one_class_digits.py  robust_distance_profile_demo.py  run_use_case_gallery.py  small_sample_heavy_tail.py  spd_geometry_diagnostics.py  spd_geometry_ml_use_cases.py  use_case_biomedical_signal.py  use_case_breast_cancer_screening.py  use_case_digits_one_class_baselines.py  use_case_finance_risk.py  use_case_fraud_screening.py  use_case_image_feature_anomaly.py  use_case_maintenance_monitoring.py  use_case_ml_preprocessing.py  use_case_multimodal_anomaly.py  use_case_network_traffic.py  use_case_portfolio_stress.py  use_case_quality_control.py  use_case_sensor_anomaly.py  (+4 more)
examples_external/: DATASETS.md  README.md  _kaggle_utils.py  collect_external_results.py  finance_market_stress.py  finance_rolling_window_anomaly.py  kaggle_credit_card_fraud.py  kaggle_ieee_cis_fraud.py  kaggle_medical_screening.py  kaggle_network_intrusion.py  kaggle_predictive_maintenance.py  make_synthetic_prices.py  run_external_demo_suite.py
examples_external/notebooks/: robustcov_kaggle_template.ipynb
notebooks/: 01_quickstart_robust_distances.ipynb  02_small_sample_heavy_tail.ipynb  03_credit_card_fraud_external_template.ipynb  04_finance_market_stress.ipynb  README.md
paper/: benchmark_claims.md  paper.bib  paper.md  release_readiness_audit.md
robustcov/: __init__.py  _utils.py  auto.py  covariance.py  diagnostics.py  external.py  geometry.py  gpytorch_kernels.py  kernels.py  m_estimators.py  metrics.py  multimodal.py  outliers.py  parallel.py  plotting.py  preprocessing.py  sklearn_kernels.py
src/: robustcov_cpp.cpp
tests/: conftest.py  test_basic.py  test_geometry.py  test_kernel_metrics.py  test_multimodal.py
(+47 files in other folders)
